--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             Lorem ipsum dolor sit amet consectetur, adipisicing elit.
           </div>
 
-          <div class="px-5 pt-3 pb-lg-0 pb-md-0 pb-5">
+          <div class="px-sm-5 pt-3 pb-lg-0 pb-md-0 pb-5">
             <button type="button" class="btn btn-primary">Read More</button>
           </div>
         </div>
