--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <div class="col-lg-3 text-center py-5 shadow rounded-3">
               <div class="d-flex justify-content-center">
                 <div class="icon icon-market rounded-circle">
-                  <i class="fa-solid fa-arrows-spin"></i>
+                  <i class="fa-solid fa-arrows-spin mt-3"></i>
                 </div>
               </div>
 
@@ -170,7 +170,7 @@
             <div class="col-lg-3 text-center py-5 shadow rounded-3">
               <div class="d-flex justify-content-center">
                 <div class="icon icon-screen rounded-circle">
-                  <i class="fa-solid fa-display"></i>
+                  <i class="fa-solid fa-display mt-3"></i>
                 </div>
               </div>
 
@@ -607,7 +607,7 @@
       <div class="row justify-content-center">
         <div class="col-lg-8 col-md-5 col-sm-12 col">
           <div class="row justify-content-md-around justify-content-sm-center">
-            <div class="col-lg-3 col-md-12 d-flex justify-content-center mt-5">
+            <div class="col-lg-3 col-md-12 d-flex justify-content-center mt-5 ">
               <div class="card" style="width: 14rem">
                 <img src="card1.jpg" class="card-img-top" alt="..." />
                 <div class="card-body">
@@ -616,7 +616,7 @@
                     Inspiration
                   </div>
                 </div>
-                <div class="small-text ps-3">
+                <div class="small-text ps-3 mb-3">
                   <span>Posted on</span>
                   <span class="color">27 Jan 2045</span>
                 </div>
@@ -631,7 +631,7 @@
                     Inspiration
                   </div>
                 </div>
-                <div class="small-text ps-3">
+                <div class="small-text ps-3 mb-3">
                   <span>Posted on</span>
                   <span class="color">27 Jan 2045</span>
                 </div>
@@ -646,7 +646,7 @@
                     Inspiration
                   </div>
                 </div>
-                <div class="small-text ps-3">
+                <div class="small-text ps-3 mb-3">
                   <span>Posted on</span>
                   <span class="color">27 Jan 2045</span>
                 </div>
@@ -658,7 +658,7 @@
     </div>
 
     <div class="container d-flex justify-content-center mt-5">
-      <button type="button" class="btn btn-primary px-5 mt-3">View More</button>
+      <button type="button" class="btn btn-primary px-3 mt-3">View More</button>
     </div>
 
     <!-- section last -->
