--- a/index.html
+++ b/index.html
@@ -194,9 +194,12 @@
     <div class="container mt-5">
       <div class="row justify-content-center">
         <div
-          class="col-lg-5 col-md-12 col-sm-12 col-12 bg-light py-sm-5 rounded-3"
+          class="col-lg-5 col-md-12 col-sm-12 col-12  py-sm-5 rounded-3"
         >
-          <div class="fs-4 pt-sm-5 px-sm-5">
+            <div class="small-text-2 gray-text-color pt-sm-5 px-sm-5">
+                About Us
+            </div>
+          <div class="fs-4  ps-sm-5">
             The number #1 SEO service <br />
             Company
           </div>
@@ -213,7 +216,7 @@
             <button type="button" class="btn btn-primary">Read More</button>
           </div>
         </div>
-        <div class="col-lg-3 col-md-9 col-sm-12 col-12 bg-light py-5 rounded-3">
+        <div class="col-lg-3 col-md-9 col-sm-12 col-12  py-5 rounded-3">
           <div class="d-flex justify-content-end">
             <img src="hero2.jpg" class="img-fluid" alt="" />
           </div>
@@ -223,7 +226,7 @@
 
     <!-- section 5 -->
 
-    <div class="container-fluid bg-light py-5">
+    <div class="container-fluid bg-light py-5 mt-5">
       <div class="container">
         <div class="row">
           <div class="col">
@@ -232,6 +235,11 @@
             </div>
             <div class="text-center gray-text-color text-capitalize fs-4">
               how SEO team can help
+            </div>
+            <div class=" text-center color  fs-1">
+
+                ___
+
             </div>
           </div>
         </div>
@@ -410,6 +418,9 @@
           <div class="text-center gray-text-color text-capitalize fs-4">
             choose plan the right for you
           </div>
+          <div class=" text-center color  fs-1">
+            ___
+        </div>
         </div>
       </div>
     </div>
@@ -597,6 +608,9 @@
           <div class="text-center gray-text-color text-capitalize fs-4">
             choose plan the right for you
           </div>
+          <div class=" text-center color  fs-1">
+          ___
+        </div>
         </div>
       </div>
     </div>
