--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
               </div>
 
               <button type="button" class="btn btn-secondary px-5 mt-3">
-                Subsribe
+                Subscribe
               </button>
             </div>
             <div
@@ -505,7 +505,7 @@
               </div>
 
               <button type="button" class="btn btn-light color px-5 mt-3">
-                Subsribe
+                Subscribe
               </button>
             </div>
 
@@ -547,7 +547,7 @@
               </div>
 
               <button type="button" class="btn btn-secondary px-5 mt-3">
-                Subsribe
+                Subscribe
               </button>
             </div>
           </div>
@@ -739,7 +739,7 @@
                     placeholder="email@domain.com"
                   />
                   <button type="button" class="btn newbtn btn-primary mt-3">
-                    Subscibe
+                    Subscribe
                   </button>
                 </div>
               </div>
