--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-5 col-sm-12 bg-light py-sm-5 rounded-3">
+        <div class="col-lg-4 col-md-5 col-sm-12 bg-light py-lg-5 rounded-3">
           <div class="font-big-size pt-sm-5 px-5">
             Let's Check and Optimize <br />
             your website!
@@ -128,7 +128,7 @@
       <div class="row justify-content-center">
         <div class="col-lg-8 col-md-4 col-sm-7 col-7">
           <div class="row justify-content-around">
-            <div class="col-lg-3 text-center py-5 shadow rounded-3">
+            <div class="col-lg-3 text-center py-5 shadow rounded-3 mt-lg-0 mt-3">
               <div class="d-flex justify-content-center">
                 <div class="icon icon-trophy rounded-circle">
                   <i class="fa-solid fa-trophy mt-3"></i>
@@ -147,7 +147,7 @@
                 Read More
               </button>
             </div>
-            <div class="col-lg-3 text-center py-5 shadow rounded-3">
+            <div class="col-lg-3 text-center py-5 shadow rounded-3 mt-lg-0 mt-3">
               <div class="d-flex justify-content-center">
                 <div class="icon icon-market rounded-circle">
                   <i class="fa-solid fa-arrows-spin mt-3"></i>
@@ -167,7 +167,7 @@
               </button>
             </div>
 
-            <div class="col-lg-3 text-center py-5 shadow rounded-3">
+            <div class="col-lg-3 text-center py-5 shadow rounded-3 mt-lg-0 mt-3">
               <div class="d-flex justify-content-center">
                 <div class="icon icon-screen rounded-circle">
                   <i class="fa-solid fa-display mt-3"></i>
@@ -216,7 +216,7 @@
             <button type="button" class="btn btn-primary">Read More</button>
           </div>
         </div>
-        <div class="col-lg-3 col-md-9 col-sm-12 col-12  py-5 rounded-3">
+        <div class="col-lg-3 col-md-9 col-sm-12 col-12  py-lg-5 py-md-2 rounded-3">
           <div class="d-flex justify-content-end">
             <img src="hero2.jpg" class="img-fluid" alt="" />
           </div>
@@ -226,7 +226,7 @@
 
     <!-- section 5 -->
 
-    <div class="container-fluid bg-light py-5 mt-5">
+    <div class="container-fluid bg-light py-5 mt-lg-5 mt-2">
       <div class="container">
         <div class="row">
           <div class="col">
@@ -383,7 +383,7 @@
     <div class="container-fluid py-5 back-section-6">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-lg-8 col-md-6 col-sm-11">
+          <div class="col-lg-8 col-md-9 col-sm-11">
             <div class="text-center fs-2 text-capitalize text-light">
               check your website seo
             </div>
